[package]
name = "test-for-wasm"
version = "0.1.0"
authors = ["tman"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.57"
features = [ "console" ]

[features]
default = [ "wee_alloc" ]
